[build-system]
requires = [
    "setuptools >= 44.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "flow-hsi"
authors = [
  { name="Anrei Korepanov", email="andrew.korepanov@gmail.com" },
]
version = "0.1.1"
maintainers = [
  { name="Andrei Korepanov", email="andrew.korepanov@gmail.com" },
]
description = "HSI flows"
requires-python = "==3.10.12"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dynamic = ["dependencies", "version", "readme"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}
readme = {file = ["README.md"]}

[project.urls]
"Homepage" = "https://github.com/subtlevenom/flow-hsi"
"Bug Tracker" = "https://github.com/subtlevenom/flow-hsi"

[project.scripts]
flow = "flow-hsi:main"

[tool.setuptools]
package-dir = { "" = "flows" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=flow --cov=flow_helpers --cov-report=term-missing --cov-report=lcov:coverage.lcov"

[tool.setuptools.package-data]
"*" = ["*.pth", "*.npy"]
