[build-system]
requires = [
    "setuptools >= 44.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "flow-hsi"
authors = [
  { name="Anrei Korepanov", email="andrew.korepanov@gmail.com" },
]
maintainers = [
  { name="Andrei Korepanov", email="andrew.korepanov@gmail.com" },
]
license = "GPL-3.0-or-later"
description = "HSI flows"
requires-python = "==3.10.12"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version", "readme"]

[project.urls]
"Homepage" = "https://github.com/subtlevenom/flow-hsi"
"Repository" = "https://github.com/subtlevenom/flow-hsi" 
"Bug Tracker" = "https://github.com/subtlevenom/flow-hsi"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}
readme = {file = ["README.md"]}

[tool.setuptools]
packages = ["flows"]

[tool.setuptools.package-data]
"*" = ["*.pth", "*.npy"]

[tool.pytest.ini_options]
pythonpath = [".", "flows"]
addopts = "--cov=ml --cov=ml_helpers --cov-report=term-missing --cov-report=lcov:coverage.lcov"

